# Arithmetik

./: .gitignore
src/: CMakeLists.txt  CalibrationPage.qml  GamePage.qml  Main.qml  Resource.qrc  ResultPage.qml  StartPage.qml  controller.cpp  controller.h  main.cpp
